hphp/hack/test/typecheck/constraints/class_type_constant1.php
<?hh

interface Constraint<T as num> {}

class InvalidConstraint {
  const type T = varray<Constraint<string>>;
}
